# mpl3d-turbo

./: Cargo.toml  README.md  README_zh.md  example.py  performance_test.py  pyproject.toml
.github/workflows/: build-wheels.yaml
python/: setup.py
python/mpl3d_rs/: __init__.py  py_fallback.py
src/: poly3d.rs  proj3d.rs  py_bridge.rs
