[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mpl3d_rs"
version = "0.1.0"
description = "高性能Matplotlib 3D绘图库，使用Rust实现"
authors = [
    {name = "Elton PDE Team", email = "example@example.com"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "mpl3d_rs.mpl3d_rs"
